tests/typechecker/should_pass/instance_of_module_with_one_argument.csp
module m(z)
x=0
exports
y=1
endmodule 
instance im = m(1)
print im::y
