tests/typechecker/should_fail/module_instances_3.csp
module M(X)
exports
    y = M1::y
endmodule

instance M1 = M({1})
